fix punctuation in landing page translation

--- a/apps/faqcheck_web/priv/gettext/es/LC_MESSAGES/default.po
+++ b/apps/faqcheck_web/priv/gettext/es/LC_MESSAGES/default.po
@@ -34,7 +34,7 @@ msgstr "Subir una hoja de cálculo"
 #, elixir-format
 #: lib/faqcheck_web/templates/page/index.html.eex:2
 msgid "Welcome to %{name}!"
-msgstr "Bienvenidos a %{name}!"
+msgstr "¡Bienvenidos a %{name}!"
 
 #, elixir-format
 #: lib/faqcheck_web/templates/help/index.html.eex:3
